<?xml version="1.0"?>
<package>
  <name>estop_gateway</name>
  <version>0.0.1</version>
  <description>validate and relay heartbeats from an UDP source to ROS</description>
  <author email="dorian.goepp@inria.fr">Dorian Goepp</author>
  <maintainer email="dorian.goepp@inria.fr">Dorian Goepp</maintainer>
  <license>CeCILL-C</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
</package>
